# database

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  yoyo.ini
.github/workflows/: build-dbdocs.yml  dependabot-testing.yml  docker-production.yml  testing.yml
migration/: 20210718_01_E6H4i-add-view-with-event-summary.py  20210727_01_Lim9D-add-new-event-type-uuid.py
schema/: randomicu.dbml
scripts/: migrate.sh
