[tool.poetry]
name = "randomicu-database"
version = "0.0.1"
description = "Database migration scripts with Yoyo"
authors = ["pythoninja"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "3.9"
yoyo-migrations = "^7.2.0"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
