[tool.poetry]
name = "randomicu-database"
version = "1.0.0"
description = "Database migration scripts with Yoyo"
authors = ["pythoninja"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.10"
yoyo-migrations = "^7.3.2"
psycopg2-binary = "^2.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
